# Fract-ol_42

./: CMakeLists.txt  Makefile  bonus_fractals.c  calculation.c  clean.c  colors.c  drawing.c  fractal.c  fractol.h  fractol_keys.h  init.c  init_norme.c  key_events.c  key_utils.c  main.c  mandatory_fractals.c  mandelbrot.c  mouse_events.c  print.c  utils.c
includes/: fractol.h  fractol_keys.h
libft/: libft.h
src/: bonus_fractals.c  clean.c  colors.c  drawing.c  fractal.c  init.c  init_norme.c  key_events.c  key_utils.c  main.c  mandatory_fractals.c  mouse_events.c  print.c  utils.c
